# OptiWise2

./: app_complete.py  data_models.py  optimization_core_fixed.py  optimization_global.py  optimization_max_utilisation.py  optimization_test2.py  optimization_test3.py  optimization_test4.py  optimization_test5.py  optimization_test5_duplicate.py  optimization_test_simple.py  optimization_unified.py  parsers.py  parsers_csv.py  parsers_csv_standalone.py  pdf_layout_generator.py  pyproject.toml  replit.md  report_generators.py  sample_core_materials.csv  sample_cutlist.csv  sample_import_format_core_materials.csv  sample_import_format_laminates.csv  sample_import_format_parts.csv  sample_laminates.csv  sample_new_format_parts.csv  simple_reports.py  utils.py
.devcontainer/: devcontainer.json
