[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "ortools>=9.14.6206",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.46.0",
]
